# winch_controller

./: CMakeLists.txt  README.md  package.xml
Scripts/: tcpserver.py
controller/: controller.py
scripts/: tcpserver.py
srv/: SetDepth.srv  SetVelocity.srv
winch_controller_arduino/: winch_controller_arduino.ino
